Fix collapse issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-.collapse {
+.collapse:empty {
   padding: 0px !important;
   margin: 0px !important;
   height: 0px !important;
@@ -6,4 +6,8 @@
 
 * {
   font-size: 13px !important;
+}
+
+.accordion-inner {
+  padding-top: 10px;
 }
